# steam-library-fixer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GITHUB_CHECKLIST.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SECURITY.md  pyproject.toml  requirements.txt  run.bat  run.sh  setup.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: tests.yml
docs/: EXAMPLES.md  GITHUB_SETUP.md  PROJECT_STRUCTURE.md  TROUBLESHOOTING.md
src/: __init__.py  __main__.py  backup.py  fixer.py  logger.py  main.py  scanner.py  utils.py  vdf_parser.py
tests/: __init__.py  test_utils.py  test_vdf_parser.py
