[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "steam-library-fixer"
version = "1.0.0"
description = "Automatic Steam library repair tool for fixing configuration issues"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Steam Library Fixer Contributors"}
]
keywords = [
    "steam", "gaming", "repair", "fix", "library", "configuration",
    "steam-games", "steam-library", "steam-error", "game-management",
    "steam-repair", "steam-tool", "gaming-utility"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Games/Entertainment",
    "Topic :: System :: Systems Administration",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
requires-python = ">=3.8"
dependencies = [
    "colorama>=0.4.6",
    "rich>=13.7.0",
    "psutil>=5.9.8",
    "click>=8.1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "pylint>=3.0.0",
    "mypy>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/sourmilka/steam-library-fixer"
Repository = "https://github.com/sourmilka/steam-library-fixer"
Issues = "https://github.com/sourmilka/steam-library-fixer/issues"
Documentation = "https://github.com/sourmilka/steam-library-fixer#readme"

[project.scripts]
steam-fixer = "src.main:main"

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pylint]
max-line-length = 100
disable = ["C0103", "R0913"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
